chore(Sonar): replaced .collect(Collectors.toList()) with .toList()